{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 293,
  "lineage": "d18fe8c8-852c-b632-7638-687982877393",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "kubeview-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:loadbalancer/app/kubeview-alb/5efcfad4a3b00464",
            "arn_suffix": "app/kubeview-alb/5efcfad4a3b00464",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "kubeview-alb-967099584.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:loadbalancer/app/kubeview-alb/5efcfad4a3b00464",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kubeview-alb",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-03536b0e6a68422ce"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-022b48b85979eed92"
              },
              {
                "subnet_id": "subnet-080f055369e5a4aa4"
              }
            ],
            "subnets": [
              "subnet-022b48b85979eed92",
              "subnet-080f055369e5a4aa4"
            ],
            "vpc_id": "vpc-0b3eaa2c7ab61a74f",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:loadbalancer/app/kubeview-alb/5efcfad4a3b00464"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:listener/app/kubeview-alb/5efcfad4a3b00464/fc4833c7f2c146c6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:listener/app/kubeview-alb/5efcfad4a3b00464/fc4833c7f2c146c6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:loadbalancer/app/kubeview-alb/5efcfad4a3b00464",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:listener/app/kubeview-alb/5efcfad4a3b00464/fc4833c7f2c146c6"
          },
          "dependencies": [
            "module.alb.aws_lb.kubeview-lb",
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:listener/app/kubeview-alb/5efcfad4a3b00464/dc4db6755590ae32",
            "certificate_arn": "arn:aws:acm:eu-west-2:183317995200:certificate/ffddb939-3881-428e-ba04-c5bb3c5f6e40",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:targetgroup/kubeview-alb-tg/ad06fa54f28ec64a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:listener/app/kubeview-alb/5efcfad4a3b00464/dc4db6755590ae32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:loadbalancer/app/kubeview-alb/5efcfad4a3b00464",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:listener/app/kubeview-alb/5efcfad4a3b00464/dc4db6755590ae32"
          },
          "dependencies": [
            "module.acm.aws_acm_certificate.cert",
            "module.alb.aws_lb.kubeview-lb",
            "module.alb.aws_lb_target_group.kubeview-lb",
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kubeview-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:targetgroup/kubeview-alb-tg/ad06fa54f28ec64a",
            "arn_suffix": "targetgroup/kubeview-alb-tg/ad06fa54f28ec64a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:targetgroup/kubeview-alb-tg/ad06fa54f28ec64a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "kubeview-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b3eaa2c7ab61a74f"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:183317995200:targetgroup/kubeview-alb-tg/ad06fa54f28ec64a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183317995200:security-group/sg-03536b0e6a68422ce",
            "description": "Security group for alb",
            "egress": [],
            "id": "sg-03536b0e6a68422ce",
            "ingress": [],
            "name": "kubeview-sg-alb",
            "name_prefix": "",
            "owner_id": "183317995200",
            "region": "eu-west-2",
            "revoke_rules_on_delete": true,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b3eaa2c7ab61a74f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183317995200",
            "id": "sg-03536b0e6a68422ce",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183317995200:security-group/sg-074d90854b2d28db1",
            "description": "Security group for ecs app",
            "egress": [],
            "id": "sg-074d90854b2d28db1",
            "ingress": [],
            "name": "kubeview-sg-ecs",
            "name_prefix": "",
            "owner_id": "183317995200",
            "region": "eu-west-2",
            "revoke_rules_on_delete": true,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b3eaa2c7ab61a74f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183317995200",
            "id": "sg-074d90854b2d28db1",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic from alb",
            "from_port": 0,
            "id": "sgrule-2658180377",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-west-2",
            "security_group_id": "sg-03536b0e6a68422ce",
            "security_group_rule_id": "sgr-058d84b308f139b3f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow http inbound traffic from internet",
            "from_port": 80,
            "id": "sgrule-1933372791",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-03536b0e6a68422ce",
            "security_group_rule_id": "sgr-03b9c2a57cabf7af7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound traffic from ALB",
            "from_port": 0,
            "id": "sgrule-3018147952",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-west-2",
            "security_group_id": "sg-074d90854b2d28db1",
            "security_group_rule_id": "sgr-0a67fea1a2e260429",
            "self": false,
            "source_security_group_id": "sg-03536b0e6a68422ce",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.ecs_sg",
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic from ECS",
            "from_port": 0,
            "id": "sgrule-3764318995",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-west-2",
            "security_group_id": "sg-074d90854b2d28db1",
            "security_group_rule_id": "sgr-0ff622ec9c62d0e0a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.ecs_sg",
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kubeview-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183317995200:internet-gateway/igw-0772ae5e457046c0c",
            "id": "igw-0772ae5e457046c0c",
            "owner_id": "183317995200",
            "region": "eu-west-2",
            "tags": {
              "Name": "kubeview-vpc-IGW"
            },
            "tags_all": {
              "Name": "kubeview-vpc-IGW"
            },
            "vpc_id": "vpc-0b3eaa2c7ab61a74f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0772ae5e457046c0c",
            "id": "r-rtb-05a16460e952dea421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-05a16460e952dea42",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183317995200",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-05a16460e952dea42"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.kubeview-igw",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183317995200:route-table/rtb-05a16460e952dea42",
            "id": "rtb-05a16460e952dea42",
            "owner_id": "183317995200",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3eaa2c7ab61a74f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183317995200",
            "id": "rtb-05a16460e952dea42",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aa369ca0924dea1",
            "region": "eu-west-2",
            "route_table_id": "rtb-05a16460e952dea42",
            "subnet_id": "subnet-022b48b85979eed92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e156f8af9c9164cd",
            "region": "eu-west-2",
            "route_table_id": "rtb-05a16460e952dea42",
            "subnet_id": "subnet-080f055369e5a4aa4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183317995200:subnet/subnet-022b48b85979eed92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022b48b85979eed92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183317995200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0b3eaa2c7ab61a74f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183317995200",
            "id": "subnet-022b48b85979eed92",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183317995200:subnet/subnet-080f055369e5a4aa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080f055369e5a4aa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183317995200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0b3eaa2c7ab61a74f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183317995200",
            "id": "subnet-080f055369e5a4aa4",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kubeview-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubeview-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183317995200:vpc/vpc-0b3eaa2c7ab61a74f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ef6f552ed726709",
            "default_route_table_id": "rtb-01e4d5e92931af854",
            "default_security_group_id": "sg-02f8096b01730b7a8",
            "dhcp_options_id": "dopt-075fbb7148a670a4a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b3eaa2c7ab61a74f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e4d5e92931af854",
            "owner_id": "183317995200",
            "region": "eu-west-2",
            "tags": {
              "Name": "kubeview-vpc"
            },
            "tags_all": {
              "Name": "kubeview-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}